second commit and almost completed project

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="about-section">
 
 
-            <!-- <div class="about main-padding">
+            <div class="about main-padding">
 
                 <div class="about-me">
                     <h2>About me</h2>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <div class="portfolio-section main-padding">
                 <div class="portfolio-head">
@@ -225,7 +225,7 @@
                 </div>
             </div>
 
-            <div class="form-section">
+            <div class="form-section main-padding">
                 <div class="form-sec-head">
                     <h5>Contact</h5>
                     <h2>Reach out me</h2>
@@ -239,7 +239,8 @@
                         <input type="email" id="email" placeholder="Email">
                     </div>
                     <textarea id="message" placeholder="Message"></textarea>
-                    <input type="file" id="file">
+                    <input type="file" id="file" >
+                    <label for="file" class="file-label"><i class="fa-solid fa-link"></i> ATTACH FILE</label>
                     <button type="submit">Submit now</button>
                 </form>
                 </div>
@@ -253,6 +254,38 @@
 
        
     </main>
+
+    <footer>
+        <div class="footer-design">
+            <h2>Sajmul</h2>
+            <div class="nav-link">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About <Menu></Menu></a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="contact">
+                <a href="https://www.facebook.com/saj.mul.14/"><i class="fa-brands fa-facebook"></i></a>
+
+                    <a href="https://x.com/SajmulHossain"><i class="fa-brands fa-twitter"></i></a>
+
+                    <a href="https://www.instagram.com/sajmulhossain/"><i class="fa-brands fa-instagram"></i></a>
+
+                    <a href="https://www.linkedin.com/in/sajmulhossain/"><i class="fa-brands fa-linkedin"></i></a>
+
+                    <a href="https://github.com/smsajmul"><i class="fa-brands fa-github"></i></a>
+            </div>
+
+            <div class="copyright">
+                &copy; <span>Sajmul</span> All rights reserved , inc.
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
